--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,7 +7,7 @@
     tools:context=".MenuActivity">
 
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/listmenu"
         android:layout_width="match_parent"
         android:layout_height="675dp"
         app:layout_constraintBottom_toTopOf="@+id/checkout"
