--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
 
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/listcomment"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginTop="12dp"
