--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuActivity">
+    tools:context=".CheckActivity">
 
     <ListView
-        android:id="@+id/listmenu"
+        android:id="@+id/listcheckout"
         android:layout_width="match_parent"
-        android:layout_height="675dp"
-        app:layout_constraintBottom_toTopOf="@+id/check"
+        android:layout_height="600dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,11 +17,24 @@
         app:layout_constraintVertical_bias="0.037" />
 
     <Button
-        android:id="@+id/check"
+        android:id="@+id/checkout_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="前往購物車"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
+        android:text="信用卡付款"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkout_cash" />
+
+    <Button
+        android:id="@+id/checkout_cash"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="現金付款"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listcheckout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
