--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@null"
-    tools:context=".HomeActivity2">
+    tools:context=".HomeActivity">
 
     <Spinner
         android:id="@+id/spinner"
